# CS759-HPC

./: README.md
FinalProject759/: CMakeLists.txt
FinalProject759/include/: cfd.hpp  cfd_cuda.cuh  cfd_omp.hpp  field.hpp  splinear.hpp  splinear_cuda.cuh  splinear_omp.hpp
FinalProject759/results/: cu_threads.txt  omp_threads.txt  plot.py  size_comp.txt  u_omp.txt  u_seq.txt
FinalProject759/src/: cfd.cpp  cfd_cuda.cu  cfd_omp.cpp  field.cpp  main.cpp  splinear.cpp  splinear_cuda.cu  splinear_omp.cpp
HW01/: HW1.txt  task4.sh  task6.cpp
HW02/: assignment2.txt  convolution  convolution.cpp  elapse_time.py  elapse_time.txt  matmul.cpp  scan.cpp  task1.cpp  task1scaling.cpp  task2.cpp  task3  task3.cpp
HW03/: 16.out  512.out  Makefile  elapse_time.py  result.txt  run.sh  task1  task1.cu  task2  task2.cu  task3  task3.cu  vscale.cu
HW04/: BeyondDuty.docx  Makefile  elapse_time.py  matmul  matmul.cpp  matmul.cu  matmul.cuh  run.sh  stencil  stencil.cpp  stencil.cu  stencil.txt  task1  task1.cu  task1_128.txt  task1_256.txt  task1_512.txt  task2  task2.cu  task2.sh  task2_1024.txt  task2_128.txt  task2_256.txt  task2_512.txt
HW05/: Makefile  assignment5.docx  elapse_time.py  matmul.cu  matmul.cuh  matmul.txt  matmul1.cu  matmul2.cu  matmul_template.cu  memcheck.txt  ppointer.cpp  reduce.cu  run.sh  task1  task1.cu  task1_1024 copy.txt  task1_1024.txt  task1_128.txt  task2  task2.cu  task22.cu  task2_16.txt  task2_32.txt  task2_op.txt
HW06/: Makefile  assignment6.docx  elapse_time.py  memcheck.txt  mmul.cu  scan  scan.cu  scan.cuh  task1  task1.cu  task1.txt  task2  (+3 more)
(+61 files in other folders)
